--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body{
 .img-section{
 	background-color: #fff;
 	width: 95%;
-	margin: 0, auto;
+	margin: 0 auto;
 }
 .img-caption{
 	font-size:20px;
