--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@ body{
 	width: 97%;
 }
 
+@media only screen and (max-width: 480px) {
+	.img {
+	  width: 100;
+	}
+  }
+
 .img-section{
 	background-color: #fff;
 	width: 95%;
