--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,13 @@ body{
 	}
   }
 
+
+@media screen and (max-width: 480px) {
+	h1 {
+	  width: 100%;
+	}
+  }
+
 .img-section{
 	background-color: #fff;
 	width: 95%;
