--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
 	margin: 20px auto;
 }
 
-.heading{
+h1{
 	padding-top:30px;
 	font-size: 60px;
 }
@@ -34,7 +34,7 @@ body{
 
 @media screen and (max-width: 480px) {
 	h1 {
-	  font-size: 20px;
+	  font-size: 2px;
 	}
   }
 
