--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@ body{
 	color: #555D50;
 }
 
+h1{
+	padding-top:30px;
+	font-size: 60px;
+}
+
 .tribute-page{
 	text-align: center;
 	background-color: #eee;
@@ -12,10 +17,6 @@ body{
 	margin: 20px auto;
 }
 
-h1{
-	padding-top:30px;
-	font-size: 60px;
-}
 
 .heading-text{
 	font-size:22px;
@@ -24,19 +25,6 @@ h1{
 .img{
 	width: 97%;
 }
-
-@media screen and (max-width: 480px) {
-	.img {
-	  width: 100%;
-	}
-  }
-
-
-@media screen and (max-width: 480px) {
-	h1 {
-	  font-size: 2px;
-	}
-  }
 
 .img-section{
 	background-color: #fff;
@@ -81,6 +69,32 @@ h1{
 .recoded{
 	text-align: center;
 }
+
+
+@media screen and (max-width: 480px) {
+	.img {
+	  width: 100%;
+	}
+  }
+
+
+@media screen and (max-width: 480px) {
+	h1 {
+	  	font-size: 25px;
+	}
+	.heading-text{
+		font-size: 12px;
+	}
+	.img-caption{
+		font-size: 10px;
+	}
+	.timeline-lists{
+	font-size: 9px;
+	}
+	.blockquote{
+	font-size: 9px;
+	}
+  }
 
 .recoded-link:hover{
 	color:burlywood;
